# ChangeLog for dev-ruby/cucumber
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

  16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Remove old versions

  16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump.

  10 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump with minor bug fixes.

  04 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump

  27 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump with minor bug fixes.

  15 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump.

  14 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Remove old versions.

  30 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump

  29 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump

  25 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump, remove old stable version.

  19 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump: major overhaul of the underlying implementation.

  02 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  cucumber-0.1.16.ebuild:
  Mark stable for amd64 and x86.

  02 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Remove old versions of cucumber and versions older than next stable target.

  20 Jan 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  +cucumber-0.1.16.ebuild
  Version bump: The most notable improvement is compatibility with Webrat 0.4.
  Rails/Webrat users should upgrade both Cucumber and Webrat gems.

  07 Jan 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump
