@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST cucumber-0.3.5.gem 145920 RMD160 38d0aac55e47d56a3ad7fd53d05064305d8bdaf3 SHA1 dc7e2a67a275d144243d5aa401fba5322099df9c SHA256 6eed005a44bca62447f7d5807faa3e6627b163a33711e677430fd0407fd6b30e
+DIST cucumber-0.3.6.gem 147968 RMD160 4482856bb9408513d9fa70d463f26ab7b34d5807 SHA1 baa4033078475a4307b5cec0f0e9760ada610584 SHA256 0b2acc569bfc7bfc15522362c0dfc43e7a498ad5fb56c6d8a8c8a1cb55e5dc64
 EBUILD cucumber-0.3.5.ebuild 565 RMD160 0e71e1222c5c9362c4723ca702a8b2a29ca404d3 SHA1 cdb0864fde9fad902c844d121f29e3f6d4f5c49a SHA256 3165d7ba941f5cc44d2eb51cc092ca9c3bfc0bf247e65cae81b4a234f6b8c2eb
-MISC ChangeLog 1663 RMD160 605dd92603d83715c86aa44edf027bcffcae6ed3 SHA1 2a5e6df69102ad6d1d791cc285abe384d0273a6d SHA256 f8a6962e9817f4c997e8ae00f1335972e75e9b30f2b2fd2eb43c243a28e658ee
+EBUILD cucumber-0.3.6.ebuild 565 RMD160 3dc812f56130b0a300ed6b45403e199ff909e444 SHA1 9a5e19fe7aadbae6a2ebe8754d82d3cb54f3b71b SHA256 b8f825af7d416968e0a871af8877add42129e7b88537b5bebe912fa3589daef5
+MISC ChangeLog 1833 RMD160 944036d171a0b4cd447dbbe852bc98275bbcb6b7 SHA1 af68fbda7ffe7f374cdeb9ab6d9cf0ca362b45d4 SHA256 6b8dc12612f920934a6a247304865050639629d43d7bb7f6871342f5f203cd2e
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkoUKcsACgkQqj4ysMWt/vvzqwCgsGGoVv+IbEhXDj/r6brZGAh5
+iV0AnjjNEpe+UyyMpr53+cnCsgLIrssd
+=JlJk
+-----END PGP SIGNATURE-----
