@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/cucumber
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
+*cucumber-0.3.6 (20 May 2009)
+
+  20 May 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.6.ebuild:
+  Version bump with support for the Kanban development process.
+
   16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
   Remove old versions
 
